--- a/server/package.json
+++ b/server/package.json
@@ -5,16 +5,21 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js"
+		"start": "node dist/server.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.5.3"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.16",
+		"@types/express": "^4.17.21",
+		"@types/morgan": "^1.9.9",
+		"morgan": "^1.10.0"
 	}
 }
