--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
-		"mongoose": "^7.5.3"
+		"mongoose": "^7.5.3",
+		"sequelize": "^6.37.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.16",
