--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node dist/server.js"
+		"start": "nodemon dist/server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,12 +15,14 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.5.3",
+		"mysql2": "^3.9.8",
 		"sequelize": "^6.37.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.16",
 		"@types/express": "^4.17.21",
 		"@types/morgan": "^1.9.9",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"nodemon": "^3.1.1"
 	}
 }
