--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"mongoose": "^7.5.3",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.9.8",
 		"sequelize": "^6.37.3"
 	},
@@ -22,6 +23,7 @@
 		"@types/cors": "^2.8.16",
 		"@types/express": "^4.17.21",
 		"@types/morgan": "^1.9.9",
+		"@types/multer": "^1.4.11",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.1.1"
 	}
